# simulator-worker

./: .dockerignore  .env.template  .env.template.local  .gitignore  Dockerfile  README.md  dev-requirements.txt  dev.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run.ps1  run.sh
.github/workflows/: ci.yml  publish_container_image.yml
ci/linux/: build_python_package.sh  create_venv.sh  lint.sh  typecheck.sh  update_dependencies.sh
ci/win32/: create_venv.cmd  lint.cmd  typecheck.cmd  update_dependencies.cmd
doc/dev_documentation/: conf.py
doc/user_documentation/: conf.py
local_test/: Dockerfile  requirements.txt  run.cmd  run.sh  test_app.py
src/simulator_worker/: __init__.py  __main__.py  app_logging.py  omotes_logging.py  simulator_worker.py  utils.py
testdata/: test1.esdl  test1.pkl  test1_output.esdl  test_ates.esdl
unit_test/: test_hello.py  test_kpi_integration.py  test_logging.py  test_main.py
