[project]
name = "simulator-worker"
dynamic = ["version"]
authors = [{ name = "Michiel Tukker", email = "michiel.tukker@deltares.nl" }]
description = "Nieuwe Warmte Nu / OMOTES: simulator-worker."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "python-dotenv ~= 1.0.0",
    "omotes-sdk-python ~= 3.2.4",
    "omotes-simulator-core==0.0.13",
    "pyesdl==24.2.0",
    "pandas ~= 2.2.2"
]

[project.optional-dependencies]
dev = [
    "setuptools ~= 69.0.3",
    "pip-tools ~= 7.3.0",
    "black~=22.1.0",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "flake8-docstrings==1.7.0",
    "flake8-quotes==3.3.2",
    "flake8-bugbear==23.9.16",
    "flake8-mock==0.4",
    "flake8-tuple==0.4.1",
    "pytest ~=7.3.1",
    "pytest-cov ~=4.0.0",
    "bump2version==1.0.1",
    "mypy ~= 1.5.1",
    "isort==5.13.2",
    "build ~= 1.0.3",
    "pandas-stubs ~= 2.1.1"
]

[project.urls]
homepage = "https://www.nwn.nu"
documentation = "https://readthedocs.org"
repository = "https://github.com/Nieuwe-Warmte-Nu/simulator-worker"
changelog = "https://github.com/Nieuwe-Warmte-Nu/simulator-worker/blob/main/CHANGELOG.md"

[project.scripts]
simulator_worker = "simulator_worker:start_app"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools ~= 69.1.0",
    "wheel ~= 0.42.0",
    "setuptools-git-versioning>=2.0,<3",
]

[tool.setuptools-git-versioning]
enabled = true
starting_version = "0.0.13"
dev_template = "{tag}.dev{ccount}"
dirty_template = "{tag}.dev{ccount}"

[tool.pytest.ini_options]
addopts = "--cov=simulator_worker --cov-report html --cov-report term-missing --cov-fail-under 29"
testpaths = ["unit_test"]

[tool.coverage.run]
source = ["src"]

[tool.flake8]
exclude = ['.venv/*', 'venv/*', 'doc/*']
ignore = [
    'Q000', # Remove bad quotes
    'D401', # Docstring First line should be imperative
    'E203', # Space before colon (not PEP-8 compliant, and conflicts with black)
    'C408', # Suggestion to use dict() over {}
    'W503', # Starting lines with operators.
]
per-file-ignores = ['__init__.py:F401', 'test_*.py:D100,D101,D102,D103']
max-line-length = 100
count = true

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = ['.venv/*', 'venv/*', 'doc/*', 'ci/*']

# mypy per-module options:
[[tool.mypy.overrides]]
module = ["unit_test.*", "coloredlogs.*"]
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "esdl.*"
ignore_missing_imports = true
